--- a/Journal.Rmd
+++ b/Journal.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Journal"
+title: "Nuestros proyectos"
 output:
   html_document:
     toc: true
@@ -14,32 +14,29 @@ output:
 knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 ```
 
-IMPORTANT: You can delete everything in here and start fresh. You might want to start by not deleting anything above this line until you know what that stuff is doing.
+En esta sección encontrarás los proyectos que hemos realizado hasta el momento 
 
-
-This is an .Rmd file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
-
-# My first post
+# Paquete calidad
 
 2018 | 7 | 23 Last compiled: `r Sys.Date()`
 
-Notice that whatever you define as a top level header, automatically gets put into the table of contents bar on the left. 
+El paquete calidad sirve para ....
 
-## Second level header
+## Subtítulo
 
 You can add more headers by adding more hashtags. These won't be put into the table of contents
 
-### third level header
+### Subtítulo
 
 Here's an even lower level header
 
-# My second post (note the order)
+# Aplicativo shiny
 
 2018 | 7 | 23 Last compiled: `r Sys.Date()`
 
 I'm writing this tutorial going from the top down. And, this is how it will be printed. So, notice the second post is second in the list. If you want your most recent post to be at the top, then make a new post starting at the top. If you want the oldest first, do, then keep adding to the bottom
 
-# Adding R stuff
+# Codificación automárica
 
 So far this is just a blog where you can write in plain text and serve your writing to a webpage. One of the main purposes of this lab journal is to record your progress learning R. The reason I am asking you to use this process is because you can both make a website, and a lab journal, and learn R all in R-studio. This makes everything really convenient and in the sam place. 
 
